--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
         <button class="upload-btn">
           <i class="fas fa-upload"></i> Upload File
         </button>
+        <br />
+        <input type="submit" class="submit-btn" />
       </section>
     </div>
   </body>
